# astra_lite

./: .gitignore  AGENTS.md  Cargo.toml  Cross.toml  LICENSE  README.md  build.rs  build_cross.sh
macros/: Cargo.toml
macros/src/: lib.rs
map_data/: constellations.bounds.geojson  constellations.lines.geojson  dso.csv  named_stars.csv
mswin_stuff/: win_resource.rc
scripts/: create-deb-package.py  create-deb-package.sh
src/: fits_reader.rs  gtk_utils.rs  gui_camera.rs  gui_common.rs  gui_guiding.rs  gui_hardware.rs  gui_indi.rs  gui_main.rs  gui_map.rs  image.rs  image_info.rs  image_processing.rs  image_raw.rs  indi_api.rs  io_utils.rs  log_utils.rs  main.rs  math.rs  options.rs  phd2_api.rs  phd2_conn.rs  plots.rs  sexagesimal.rs  simple_fits.rs  stars.rs  stars_offset.rs  state.rs
src/core/: cam_ctrl.rs  cam_starter.rs  cam_utils.rs  cam_watchdog.rs  consts.rs  core.rs  cur_devices.rs  dev_watchdog.rs  events.rs  frame_processing.rs  indi_cam_watchdog.rs  mod.rs  mode_camera.rs  mode_capture_platesolve.rs  mode_darks_lib.rs  mode_darks_library.rs  mode_focusing.rs  mode_goto.rs  mode_mnt_calib.rs  mode_mount_calibration.rs  mode_platesolve.rs  mode_polar_align.rs  mode_tacking_pictures.rs  mode_waiting.rs  state.rs  utils.rs
src/gui/: gtk_utils.rs  gui_camera.rs  gui_common.rs  gui_hardware.rs  gui_indi.rs  gui_main.rs  gui_map.rs  mod.rs  plots.rs
src/guiding/: external_guider.rs  mod.rs  phd2_EventMonitoring.md  phd2_conn.rs  phd2_guider.rs
src/hal/: events.rs  hal_ascom_alpaca.rs  hal_indi.rs  mod.rs
src/image/: cam_db.rs  histogram.rs  image.rs  image_info.rs  image_raw.rs  image_stacker.rs  info.rs  io.rs  mod.rs  preview.rs  raw.rs  raw_stacker.rs  simple_fits.rs  stacker.rs  stars.rs  stars_offset.rs  utils.rs
src/indi/: api.rs  base64.rs  connection.rs  drivers.rs  error.rs  indi_api.rs  mod.rs  sexagesimal.rs  xml_helper.rs  xml_reader.rs
src/options/: ascom_alpaca.rs  calibration.rs  camera.rs  filter_wheel.rs  focuser.rs  guiding.rs  indi.rs  live_stacking.rs  mod.rs  mount.rs  plate_solver.rs  polar_align.rs  preview.rs  quality.rs  raw_frames.rs  site.rs  telescope.rs
src/plate_solve/: astrometry.rs  mod.rs
src/sky_map/: mod.rs  sky_map_data.rs
src/sky_math/: math.rs  mod.rs  solar_system.rs
src/ui/: gtk_utils.rs  gui_camera.rs  gui_common.rs  gui_hardware.rs  gui_indi.rs  gui_main.rs  gui_skymap.rs  indi_panel_widget.rs  indi_widget.rs  mod.rs  module.rs  plots.rs  ui_camera.rs  ui_common.rs  ui_darks_library.rs  ui_debug.rs  ui_dithering.rs  ui_flt_wheel.rs  ui_focuser.rs  ui_fw_wheel.rs  ui_guiding.rs  ui_hardware.rs  ui_indi.rs  ui_main.rs  ui_mount.rs  ui_options.rs  ui_plate_solve.rs  ui_platesolver_options.rs  ui_polar_align.rs  ui_preview.rs  ui_skymap.rs  ui_skymap_options.rs  ui_start_dialog.rs  utils.rs
src/utils/: compression.rs  gtk_utils.rs  io_utils.rs  log_utils.rs  math.rs  mod.rs  (+1 more)
ui/: main.ui  skymap_options.ui  win_resource.rc
(+63 files in other folders)
