[package]
name = "astra_lite"
version = "0.0.45"
edition = "2021"
description = "Software for deepsky astrophotography and live stacking"
repository = "https://github.com/art-den/astra_lite"
license = "MIT"
build = "build.rs"

[dependencies]
gtk = "0.17"
anyhow = { version = "1.0", features = ["backtrace"] }
fitsio = "0.21.1"
libc = "0.2"
bitstream-io = "1.3"
itertools = "0.10"
tiff = "0.8"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
regex = "1.7"
xmltree = "0.10"
dirs = "4.0"
bitflags = "1.3"
log = "0.4"
flexi_logger = "0.24"
chrono = "0.4"
once_cell = "1"
rand = "0.8.5"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"

[profile.dev]
opt-level = 0
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.profiling]
inherits = "release"
debug = true
strip = false
panic = "abort"

[profile.dev.package."*"]
opt-level = 1
