[package]
name = "astra_lite"
version = "0.0.121"
edition = "2021"
description = "Software for deepsky astrophotography and live stacking"
repository = "https://github.com/art-den/astra_lite"
license = "MIT"
build = "build.rs"

[dependencies]
gtk = "0.18"
anyhow = { version = "1.0", features = ["backtrace"] }
libc = "0.2"
bitstream-io = "1.3"
itertools = "0.10"
tiff = "0.9"
rayon = "1.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
regex = "1.7"
xmltree = "0.10"
dirs = "4.0"
bitflags = "1.3"
log = "0.4"
flexi_logger = "0.24"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
rand = "0.8.5"
msgbox = "0.6"

[target.'cfg(windows)'.build-dependencies]
embed-resource = "1.7"

[profile.dev]
opt-level = 1
panic = "abort"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = false
panic = "abort"

[profile.dev.package."*"]
opt-level = 1
